# Slambot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bumperbot_bringup/share/bumperbot_bringup/: package.sh
install/bumperbot_controller/lib/bumperbot_controller/: noisy_controller
install/bumperbot_controller/share/bumperbot_controller/: local_setup.sh  package.sh
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_lifecycle_node  simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber  simple_tf_kinematics  simple_turtlesim_kinematics
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: local_setup.sh  package.sh
log/: latest_build
src/cpp_examples/src/: simple_lifecycle_node.cpp
src/log/: latest_list
src/new_practice_bringup/launch/: new_bringup.launch.xml  real_robot_bringup.launch.py
src/new_robot_controller/: CMakeLists.txt  package.xml
src/new_robot_controller/config/: new_robot_controllers.yaml
src/new_robot_controller/launch/: joystick_teleop.launch.py  simple_controller.launch.py
src/new_robot_controller/src/: keyboard_control.cpp  simple_controller.cpp
src/new_robot_description/: CMakeLists.txt  package.xml
src/new_robot_description/launch/: display.launch.py
src/new_robot_description/rviz/: display.rviz
src/new_robot_description/urdf/: base_robot_gazebo.xacro  camera.xacro
src/new_robot_firmware/: CMakeLists.txt  new_robot_interface.xml
src/new_robot_firmware/src/: new_robot_interface.cpp
(+45 files in other folders)
